terraform/nat.tf
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "NAT Elastic IP"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_subnet.id

  depends_on = [
    aws_internet_gateway.igw
  ]

  tags = {
    Name = "NAT Gateway"
  }
}
